# prince

./: .codeclimate.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  HACKME.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  ca-presidentials.py  docs.sh  famd.R  mca-ogm.py  pca-decathlon.py  pca.html  performance.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.test.txt  setup.py  test.py
.github/actions/install-env/: action.yml
.github/workflows/: ci.yml  code-quality.yml  hugo.yml  publish.yml  unit-tests.yml
checks/: README.md  ca.R  ca.py  mca.R  mca.py  mfa.R  mfa.py  mfa_num.R  mfa_num.py  pca.R  pca.py  pca_sk.py
doc/: Makefile  pca.ipynb
doc/data/: ogm.csv  woman_work.csv
doc/examples/: ca-presidentials.py  ca-woman-work.py  mca-ogm.py  pca-decathlon.py  pca-iris.py  pca-wine.py
docs/: FAMD.md  MFA.md  Makefile  ca.rst  conf.py  config.toml  faq.rst  index.rst  introduction.rst  mca.rst  pca.rst  performance.rst
docs/content/: _index.md  ca.html  ca.ipynb  famd.ipynb  faq.ipynb  gpa.ipynb  mca.ipynb  mca.md  mfa.ipynb  pca.html  pca.ipynb  pca.md  pga.ipynb
docs/layouts/_default/_markup/: render-codeblock-mermaid.html
docs/source/: conf.py  introduction.rst  pca.rst
docs/themes/hugo-bearblog/: theme.toml
docs/themes/hugo-bearblog/archetypes/: blog.md  default.md
docs/themes/hugo-bearblog/layouts/: 404.html  index.html  robots.txt
docs/themes/hugo-bearblog/layouts/_default/: baseof.html  list.html  single.html
docs/themes/hugo-bearblog/layouts/partials/: custom_body.html  custom_head.html  favicon.html  footer.html  header.html  nav.html  seo_tags.html  style.html
examples/: CA - Hair color and eye color.ipynb  ca-presidentials.py  ca-woman-work.py  mca-ogm.py  pca-decathlon.py  pca-iris.py  pca-wine.py  pca.ipynb
examples/data/: adult.csv  bike_stations.csv  decathlon.csv  wine.csv
old_docs/: CA.md  GPA.md  MCA.md  PCA.md
prince/: __init__.py  __version__.py  base.py  ca.py  datasets.py  famd.py  gpa.py  manifolds.py  mca.py  mfa.py  one_hot.py  pca.py  pga.py  plot.py  svd.py  util.py  utils.py
prince/datasets/: 02-resultats-par-region.csv  decathlon.csv  hearthstone_cards.csv  per-capita-energy-stacked.csv  poison.csv  premier_league.csv  punctuation_marks.csv  resultats-par-departement.csv  rotations.csv
prince/plot/: __init__.py  palettes.py  util.py
prince/plot/mpl/: __init__.py  ca.py  mca.py  pca.py  prince.mplstyle  util.py
setup/: dev-requirements.txt  requirements.txt
tests/: DESCRIPTION  __init__.py  ca.R  test_ca.py  test_famd.py  test_gpa.py  test_mca.py  test_mfa.py  test_pca.py  test_pca_new.py  test_pca_old.py  test_pga.py  test_svd.py  test_util.py  util.py
tests/data/: presidentielles07.csv
