[project]
authors = [
    {name = "Max Halford", email = "maxhalford25@gmail.com"},
]
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "scikit-learn>=1.5.1",
    "pandas>=2.2.0",
    "altair>=5.0.0",
    "typing-extensions>=4.6",
]
name = "prince"
version = "0.20.1"
description = "Factor analysis in Python: PCA, CA, MCA, MFA, FAMD, GPA, PGA"

[project.optional-dependencies]
dev = [
    "nbconvert>=7.16.5",
    "fbpca>=1.0",
    "geomstats>=2.8.0",
    "pytest>=8.3.4",
    "ipykernel>=6.13.0",
    "rpy2>=3.5.2",
    "ruff>=0.8.8",
    "xarray>=2025.1.0",
]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
    "--doctest-glob=*.md"
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
lint.ignore = ["E501"]
line-length = 100
target-version = 'py310'

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
all = "warn"

[tool.ty.src]
include = ["prince"]

[tool.uv]
package = true
